--- a/FallChallenge2023/FallChallenge2023.csproj
+++ b/FallChallenge2023/FallChallenge2023.csproj
@@ -101,7 +101,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Bots\Bronze\Debug\Games\5448522766778675000.txt" />
+    <Content Include="Bots\Bronze\Debug\Games\-8010151275687054000.txt" />
     <Content Include="Bots\Bronze\Debug\Images\Models.png" />
     <Content Include="Bots\Bronze\Debug\Images\Ocean.png" />
   </ItemGroup>
@@ -111,5 +111,6 @@
       <LastGenOutput>DebugRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
