--- a/FallChallenge2023/FallChallenge2023.csproj
+++ b/FallChallenge2023/FallChallenge2023.csproj
@@ -54,15 +54,20 @@
     <Compile Include="Bots\Bronze\Agents\Conditions\Condition.cs" />
     <Compile Include="Bots\Bronze\Agents\Conditions\EmergencyCondition.cs" />
     <Compile Include="Bots\Bronze\Agents\Conditions\DiveCondition.cs" />
-    <Compile Include="Bots\Bronze\Agents\Conditions\DiveSearchCondition.cs" />
+    <Compile Include="Bots\Bronze\Agents\Conditions\SearchCrabCondition.cs" />
+    <Compile Include="Bots\Bronze\Agents\Conditions\EarlySaveCondition.cs" />
     <Compile Include="Bots\Bronze\Agents\Conditions\SearchCondition.cs" />
     <Compile Include="Bots\Bronze\Agents\Decisions\Decision.cs" />
     <Compile Include="Bots\Bronze\Agents\Decisions\DiveDecision.cs" />
     <Compile Include="Bots\Bronze\Agents\Decisions\NeedDiveDecision.cs" />
     <Compile Include="Bots\Bronze\Agents\Decisions\EmergencyDecision.cs" />
+    <Compile Include="Bots\Bronze\Agents\Decisions\EarlySaveDecision.cs" />
     <Compile Include="Bots\Bronze\Agents\Decisions\SaveDecision.cs" />
-    <Compile Include="Bots\Bronze\Agents\Decisions\DiveSearchDecision.cs" />
+    <Compile Include="Bots\Bronze\Agents\Decisions\SearchCrabDecision.cs" />
     <Compile Include="Bots\Bronze\Agents\Decisions\SearchDecision.cs" />
+    <Compile Include="Bots\Bronze\Agents\Decisions\SimpleSearchDecision.cs" />
+    <Compile Include="Bots\Bronze\Agents\DroneSearchAgent.cs" />
+    <Compile Include="Bots\Bronze\Agents\DroneSaveAgent.cs" />
     <Compile Include="Bots\Bronze\Bot.cs" />
     <Compile Include="Bots\Bronze\Debug\DebugBot.cs" />
     <Compile Include="Bots\Bronze\Debug\DebugAction.cs" />
@@ -85,10 +90,14 @@
     <Compile Include="Bots\Bronze\FishType.cs" />
     <Compile Include="Bots\Bronze\GameMath\RectangleRange.cs" />
     <Compile Include="Bots\Bronze\GameMath\Vector.cs" />
+    <Compile Include="Bots\Bronze\GameReferee.cs" />
     <Compile Include="Bots\Bronze\GameStateBase.cs" />
     <Compile Include="Bots\Bronze\GameState.cs" />
+    <Compile Include="Bots\Bronze\GameProperties.cs" />
+    <Compile Include="Bots\Bronze\GameUtils.cs" />
     <Compile Include="Bots\Bronze\RadarBlip.cs" />
     <Compile Include="Bots\Bronze\BlipType.cs" />
+    <Compile Include="Bots\Bronze\SimulationBot.cs" />
     <Compile Include="Bots\Wood\Actions\GameAction.cs" />
     <Compile Include="Bots\Wood\Actions\GameActionList.cs" />
     <Compile Include="Bots\Wood\Actions\GameActionMove.cs" />
