--- a/FallChallenge2023/FallChallenge2023.csproj
+++ b/FallChallenge2023/FallChallenge2023.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Bots\Bronze\Actions\GameActionType.cs" />
     <Compile Include="Bots\Bronze\Actions\GameActionWait.cs" />
     <Compile Include="Bots\Bronze\Agents\Decisions\Decision.cs" />
+    <Compile Include="Bots\Bronze\Agents\Decisions\KickAwayDecision.cs" />
+    <Compile Include="Bots\Bronze\Agents\Decisions\SearchDecision.cs" />
+    <Compile Include="Bots\Bronze\Agents\Decisions\SaveDecision.cs" />
     <Compile Include="Bots\Bronze\Bot.cs" />
     <Compile Include="Bots\Bronze\Debug\DebugBot.cs" />
     <Compile Include="Bots\Bronze\Debug\DebugAction.cs" />
